# tx-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cip.md
.github/workflows/: build.yml  format.yml  release.yml
examples/: send_transaction.rs
old-tx-manager/: Cargo.toml
old-tx-manager/src/: config.rs  error.rs  lib.rs  provider.rs  types.rs
old-tx-manager/src/actors/: actor_manager.rs  invalidate_actor.rs  submit_worker.rs  transaction_actor.rs
old-tx-manager/tests/: run_manager_test.sh
old-tx-manager/tests/common/: mock_provider.rs  mod.rs
old-tx-manager/tests/common/contract/: TestContract.abi  TestContract.sol  build_contract.sh
src/: config.rs  database.rs  gas_oracle.rs  lib.rs  manager.rs  provider.rs  time.rs  transaction.rs  transaction_manager.rs  types.rs  utils.rs
src/actors/: mod.rs  strategy_worker.rs
src/gas_oracle/: default.rs  eth_gas_station.rs  gas_oracle.rs  mod.rs
tests/: contract.abi  contract.sol  doc_test.rs  live_test.rs  local_test.rs  manager_test.rs  mock_manager_test.rs  mock_test.rs  mock_tests.rs  testnet_test.rs
tests/common/: mock_provider.rs  mod.rs  test_contract.rs
tests/contracts/: TestContract.sol
tests/geth/: geth.rs  mod.rs
tests/keystore/: UTC--2022-10-13T22-18-16.128502020Z--881ae37218e2a384239e9a0d647b4eb330405054
tests/mocks/: time.rs
tests/mocks/gas_oracle/: default.rs  mod.rs
tests/utilities/: Cargo.toml
tests/utilities/src/: configuration.rs  geth.rs  lib.rs  net.rs  utilities.rs
tests/utilities/src/mocks/: database.rs  middleware.rs  mod.rs  time.rs
tests/utilities/src/mocks/gas_oracle/: basic.rs  constant.rs  incrementing.rs  mod.rs  underpriced.rs
tests/utils/: database.rs  gas_oracle.rs  geth.rs  incrementing_gas_oracle.rs  middleware.rs  mod.rs  time.rs  underpriced_gas_oracle.rs
tx-manager/: Cargo.toml  Makefile  README.md  todo.txt
tx-manager/src/: database.rs  db.rs  gas_oracle.rs  gas_pricer.rs  lib.rs  manager.rs  receipt_database.rs  time.rs  transaction.rs
tx-manager/tests/: database_test.rs  gas_oracle_tests.rs  manager_test.rs  tx_manager_test.rs
tx-manager/tests/mocks/: data.rs  database.rs  gas_oracle.rs  middleware.rs  mod.rs  provider.rs
tx-manager/tests/utils/: gas_oracle.rs  geth.rs  middleware.rs
