[package]
name = "eth-tx-manager"
license = "Apache-2.0"
description = "A library for submitting transactions to the blockchain."
homepage = "https://github.com/cartesi"
repository = "https://github.com/cartesi/tx-manager"
readme = "README.md"
version = "0.9.1"
edition = "2021"
authors = [
  "Renan Santos <renan.santos@cartesi.io>",
  "Gabriel Coutinho de Paula <gabriel.coutinho@cartesi.io>"
]

[dependencies]
ethers = { version = "1.0", features = ["rustls"] }
tokio = { version = "1", features = ["fs", "macros"] }
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
async-recursion = "1.0"
reqwest = { version = "0.11", features = ["json"] }
structopt = "0.3"
tracing = "0.1"
thiserror = "1.0"
url = "2.2"
clap = { version = "4.1", features = ["derive", "env"] }

[dev-dependencies]
ethers = { version = "1.0", features = ["abigen"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serial_test = "0.8"
utilities = { path = "tests/utilities" }
hex = "0.4"

