[package]
name = "eth-tx-manager"
license = "Apache-2.0"
description = "A library for submitting transactions to the blockchain."
homepage = "https://github.com/cartesi"
repository = "https://github.com/cartesi/tx-manager"
readme = "README.md"
version = "0.10.1"
edition = "2021"
authors = [
  "Renan Santos <renan.santos@cartesi.io>",
  "Gabriel Coutinho de Paula <gabriel.coutinho@cartesi.io>"
]

[dependencies]
async-recursion = "1.0"
async-trait = "0.1"
clap = { version = "4.1", features = ["derive", "env"] }
ethers = { version = "1.0", features = ["rustls"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["fs", "macros"] }
tracing = "0.1"

[dev-dependencies]
ethers = { version = "1.0", features = ["abigen"] }
hex = "0.4"
serial_test = "2.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utilities = { path = "tests/utilities" }

