[package]
name = "tx-manager"
license = "Apache-2.0"
version = "0.2.0"
authors = ["Cartesi Team"]
homepage = "https://cartesi.io"
edition = "2021"

[dependencies]
# TOASK : what is features ws => (websocket) may need or not?
# TODO : these version are not correct
ethers = { version = "0.6", features = [ "ws" ] }
tokio = { version = "1", features = ["full"] }

# TODO : these are just for testing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
