[package]
name = "tx-manager"
license = "Apache-2.0"
version = "0.2.0"
authors = ["Cartesi Team"]
homepage = "https://cartesi.io"
edition = "2021"

[dependencies]
# TOASK : what is features ws => (websocket) may need or not?
# TODO : these version are not correct
ethers = { version = "0.6", features = [ "ws" ] }
tokio = { version = "1", features = ["full"] }
redis = "0.21.5"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
async-recursion = "1.0"

