[package]
name = "tx-manager"
license = "Apache-2.0"
version = "0.2.0"
authors = ["Cartesi Team"]
homepage = "https://cartesi.io"
edition = "2021"

# TODO : these version are (probably) not correct
[dependencies]
ethers = { version = "0.6", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1"
async-recursion = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"

