[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

[dependencies]
tx-manager = { path = "../../" }
async-trait = "0.1"
serde_json = "1.0"
ethers = { version = "0.17", features = ["abigen"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serial_test = "0.8"
tokio = { version = "1", features = ["fs", "macros"] }
tracing = "0.1"
thiserror = "1.0"
hex = "0.4"
